Fixed cards align to center

--- a/css/memory_game.css
+++ b/css/memory_game.css
@@ -3,6 +3,7 @@
   flex-flow: row wrap;
   justify-content: center;
   max-width: 1000px;
+  margin: 0 auto;
 }
 
 .card-item:hover {
